# Homework-Mono

./: .gitignore  README.md
ee201/project-1/: oscilloscope.ipynb
ee201/project-1/res/: A0029CH1.CSV  A0029CH2.CSV  oscilloscope_data_project_sim.csv
ee201/project-2/: pwm-spectra.ipynb
ee201/project-3/: main.py  pitch-detection.ipynb
ee201/project-3/res/: piano1_mono.wav.metadata.txt  piano2_mono.wav.metadata.txt  trumpet.csv  trumpet.csv.metadata.txt  twotrumpetsAB.csv  twotrumpetsAB.csv.metadata.txt
ee201/project-4/: moving-average-filters.ipynb
ee201/project-6/ALL0001/: A0001CH1.CSV  A0001CH2.CSV
ee220/hw10/: EE220-07810__HW10__Jonathan-Forhan.tex
ee220/hw11/: EE220-07810__HW11__Jonathan-Forhan.tex
ee220/hw12/: EE220-07810__HW12__Jonathan-Forhan.tex
ee220/hw6/: EE220-07810__HW6__Jonathan-Forhan.tex
ee220/hw7/: EE220-07810__HW7__Jonathan-Forhan.tex
ee220/hw8/: EE220-07810__HW8__Jonathan-Forhan.tex
ee220/hw9/: EE220-07810__HW9__Jonathan-Forhan.tex
ee220/project-1/: EE220-07810__P1__Jonathan-Forhan.tex
eg316/project-1/: load-power.tex
eg316/project-1/res/: Circuit_A_sweep_600k-750k.csv  Circuit_B_sweep_20k-50k.csv
eg316/project-2/: astable-multivibrator.tex
eg316/project-4/: analysis.tex
eg340/project-1/: project-1.py  project-1.tex
eg340/project-3/: CMakeLists.txt  Doxyfile  Makefile
eg340/project-3/res/: test.txt
eg340/project-3/src/: CMakeLists.txt  Channel.cpp  Channel.hpp  Packet.hpp  Receiver.cpp  Receiver.hpp  Transmitter.cpp  Transmitter.hpp  main.cpp  rx.cpp  rx.hpp  tx.cpp  tx.hpp  util.hpp
